# Elemental-Compiler

./: README.md  default.nix  elemental.cabal  hie.yaml  pipeline.yml  shell.nix
docs/: Compilation-Pipeline.md
docs/Contributing/: Style-Guide.md
docs/Language/: Design.md  Miscellaneous-Papers.md  Rewrite-Rules.md  Rewrite-System.md
nix/: default.nix  haskell.nix  release.nix
src/Control/Carrier/: IRBuilder.hs  ModuleBuilder.hs
src/Control/Effect/: IRBuilder.hs  ModuleBuilder.hs
src/Language/: Elemental.hs
src/Language/Elemental/: Algebra.hs  Backend.hs  Diagnostic.hs  Emit.hs  InteractionNet.hs  Location.hs  Normalise.hs  Parser.hs  Pretty.hs  Primitive.hs  Rewrite.hs  Singleton.hs  Syntax.hs  TypeCheck.hs
src/Language/Elemental/AST/: Decl.hs  Expr.hs  Program.hs  Type.hs  Unchecked.hs
src/Language/Elemental/Backend/: LLVM.hs
src/Language/Elemental/Emit/: Internal.hs
src/Language/Elemental/Singleton/: Unsafe.hs
src/Language/Elemental/Syntax/: Internal.hs  Pretty.hs  Synonyms.hs
test/: Gen.hs  Golden.hs  Location.hs  Main.hs  Pretty.hs  Util.hs
test/Golden/: .gitignore  Arithmetic.elem  Arithmetic.opt.ll  BitOrder.elem  BitOrder.opt.ll  BranchIO.elem  BranchIO.opt.ll  CallOrder.elem  CallOrder.opt.ll  CallProduct.elem  CallProduct.opt.ll  CataDynamic.elem  CataDynamic.opt.ll  CataStatic.elem  CataStatic.opt.ll  CataStaticAccum.elem  CataStaticAccum.opt.ll  CataStaticDouble.elem  CataStaticDouble.opt.ll  CataStaticTwice.elem  CataStaticTwice.opt.ll  Contextual.elem  Contextual.opt.ll  EchoChar.elem  EchoChar.opt.ll  Empty.elem  Empty.opt.ll  ForeignNames.elem  ForeignNames.opt.ll  FunctionInIO.elem  FunctionInIO.opt.ll  IOInIO.elem  IOInIO.opt.ll  MemoryBit.elem  MemoryBit.opt.ll  NestedBranch.elem  NestedBranch.opt.ll  NestedBranch2.elem  NestedBranch2.opt.ll  NestedBranch3.elem  (+19 more)
