cabal-version:       2.2

name:                elemental
version:             0.1.0.0
synopsis:            A compiler for the Elemental intermediate language
-- description:
bug-reports:         https://github.com/AlexandreTunstall/Elemental-Compiler/issues
-- There is no license yet (i.e. all rights reserved)
-- Please contact me if you would like to use the package or contribute to it
-- license:             AllRightsReserved
-- license-file:        LICENSE
author:              Alexandre Tunstall
maintainer:          alexandrejamestunstall@gmail.com
copyright:           © 2020-2021 Alexandre Tunstall
-- homepage:
category:            Compiler, Development, Language
build-type:          Simple
tested-with:         GHC == 8.10.3
extra-source-files:  test/Golden/*.elem, test/Golden/*.ll

common shared
  build-depends:
      base ^>= 4.14
    , bytestring ^>= 0.10
    , containers ^>= 0.6
    , fused-effects ^>= 1.1
    , llvm-hs == 9.0.1
    , llvm-hs-pure ^>= 9.0
    , megaparsec ^>= 9.0
    , prettyprinter ^>= 1.7
    , text ^>= 1.2
    , text-short ^>= 0.1
  default-language:    Haskell2010
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wmonomorphism-restriction
      -Wmissing-home-modules
      -Widentities
      -Wredundant-constraints
      -Wpartial-fields
      -Wmissed-specialisations
      -- Warnings not documented as not being enabled by -Wall?
      -Wmissing-deriving-strategies
      -- -Wunused-packages

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
      Language.Elemental
    , Language.Elemental.Diagnostic
    , Language.Elemental.Emit
    , Language.Elemental.Location
    , Language.Elemental.Normalise
    , Language.Elemental.Parser
    , Language.Elemental.Rewrite
    , Language.Elemental.Syntax
    , Language.Elemental.TypeCheck
    , Control.Carrier.IRBuilder
    , Control.Carrier.ModuleBuilder
    , Control.Effect.IRBuilder
    , Control.Effect.ModuleBuilder
  other-modules:
      Language.Elemental.Emit.Internal
    , Language.Elemental.Syntax.Internal
    , Language.Elemental.Syntax.Pretty
    , Language.Elemental.Primitive
    , Paths_elemental
  ghc-options:
    -Wmissing-export-lists

executable elemental
  import:              shared
  main-is:             Main.hs
  hs-source-dirs:      cli
  build-depends:
      -- Cabal complains about an extraneous version range because "the library will always be used",
      -- but don't be deceived, because "cabal repl" won't work without a build-depends on the library.
      elemental
    , prettyprinter-ansi-terminal ^>= 1.1

-- Very creatively named
test-suite test
  import:              shared
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:
      Gen
    , Golden
    , Location
    , Pretty
  build-depends:
      elemental
    , filepath ^>= 1.4
    , hedgehog ^>= 1.0
    , tasty ^>= 1.4
    , tasty-ant-xml ^>= 1.1
    , tasty-golden ^>= 2.3
    , tasty-hedgehog ^>= 1.0
