cabal-version:       2.2

name:                elemental
version:             0.1.0.0
synopsis:            A compiler for the Elemental intermediate language
description:
    The Elemental language is a lambda calculus similar to System F but extended
    with a foreign function interface intended for use as an intermediate
    language for more practical total functional programming languages.

    This package is a compiler of the language that targets LLVM and requires no
    runtime system or heap.

    See the "Language.Elemental" module for more information on how to use the
    library.
bug-reports:         https://github.com/AlexandreTunstall/Elemental-Compiler/issues
-- There is no license yet (i.e. all rights reserved)
-- Please contact me if you would like to use the package or contribute to it
-- license:             AllRightsReserved
-- license-file:        LICENSE
author:              Alexandre Tunstall
maintainer:          alexandrejamestunstall@gmail.com
copyright:           © 2020-2021 Alexandre Tunstall
-- homepage:
category:            Compiler, Development, Language
build-type:          Simple
tested-with:         GHC == 8.10.7
extra-source-files:  test/Golden/*.elem, test/Golden/*.ll

common shared
  build-depends:
      base ^>= 4.14
    , bytestring ^>= 0.10
    , containers ^>= 0.6
    , data-fix ^>= 0.3
    , dlist ^>= 1.0
    , fused-effects ^>= 1.1
    , integer-logarithms ^>= 1.0
    , lens ^>= 4.19
    , llvm-hs == 9.0.1
    , llvm-hs-pure ^>= 9.0
    , megaparsec ^>= 9.0
    , prettyprinter ^>= 1.7
    , tagged ^>= 0.8
    , text ^>= 1.2
    , text-short ^>= 0.1
    , transformers ^>= 0.5
  default-language:    Haskell2010
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wmonomorphism-restriction
      -Wmissing-home-modules
      -Widentities
      -Wredundant-constraints
      -Wpartial-fields
      -Wmissed-specialisations
      -Wstar-is-type
      -- Warnings not documented as not being enabled by -Wall?
      -Wmissing-deriving-strategies
      -- -Wunused-packages

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
      Language.Elemental
    , Language.Elemental.Algebra
    , Language.Elemental.AST.Decl
    , Language.Elemental.AST.Expr
    , Language.Elemental.AST.Program
    , Language.Elemental.AST.Type
    , Language.Elemental.AST.Unchecked
    , Language.Elemental.Backend
    , Language.Elemental.Backend.LLVM
    , Language.Elemental.Diagnostic
    , Language.Elemental.Emit
    , Language.Elemental.Location
    , Language.Elemental.InteractionNet
    , Language.Elemental.Parser
    , Language.Elemental.Pretty
    , Language.Elemental.Primitive
    , Language.Elemental.Singleton
    , Language.Elemental.Singleton.Unsafe
    , Language.Elemental.TypeCheck
    , Control.Carrier.IRBuilder
    , Control.Carrier.ModuleBuilder
    , Control.Effect.IRBuilder
    , Control.Effect.ModuleBuilder
  other-modules:
      Paths_elemental
  ghc-options:
    -Wmissing-export-lists

executable elemental
  import:              shared
  main-is:             Main.hs
  hs-source-dirs:      cli
  build-depends:
      prettyprinter-ansi-terminal ^>= 1.1
  ghc-options:
    -threaded

-- Very creatively named
test-suite test
  import:              shared
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:
      Gen
    , Golden
    , Location
    , Pretty
    , Util
  build-depends:
      elemental
    , filepath ^>= 1.4
    , hedgehog ^>= 1.0
    , tasty ^>= 1.4
    , tasty-golden ^>= 2.3
    , tasty-hedgehog ^>= 1.1
    , tasty-hunit ^>= 0.10
  ghc-options:
    -threaded
